force-app/main/default/objects/Voice_Company_Audit_Trail__c/Voice_Company_Audit_Trail__c.object-meta.xml
<CustomObject>
    <description>Voice - User - Audit Trails from WCSA</description>
    <label>V: Audit Trail</label>
    <nameField>
        <displayFormat>CAT-{00000000}</displayFormat>
        <label>Voice: Company Audit Trail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>V: Audit Trails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>