force-app/main/default/objects/Voice_Company_Audit_Trail__c/fields/AuditID__c.field-meta.xml
<CustomField>
    <fullName>AuditID__c</fullName>
    <description>Voice - WCSA - Audit ID field added for Matching</description>
    <externalId>true</externalId>
    <inlineHelpText>Voice - WCSA - Audit ID field added for Matching</inlineHelpText>
    <label>AuditID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>