force-app/main/default/objects/Voice_Company_Audit_Trail__c/fields/Company_Audit_Trail__c.field-meta.xml
<CustomField>
    <fullName>Company_Audit_Trail__c</fullName>
    <label>Company: Audit Trail</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Voice_Company_Audit_Trails</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>