force-app/main/default/objects/Voice_Company_Audit_Trail__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Voice - WCSA - Company Audit Trail Date Time Stamp (MM/DD/YYYY HH:MM:SS AM)</description>
    <inlineHelpText>Voice - WCSA - Company Audit Trail Date Time Stamp (MM/DD/YYYY HH:MM:SS AM)</inlineHelpText>
    <label>Date</label>
    <type>DateTime</type>
</CustomField>