force-app/main/default/objects/Voice_Company_Audit_Trail__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Voice: WCSA - Company Audit Trail - Description</description>
    <inlineHelpText>Voice: WCSA - Company Audit Trail - Description</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>