force-app/main/default/objects/Voice_Company_Audit_Trail__c/fields/Support_Rep__c.field-meta.xml
<CustomField>
    <fullName>Support_Rep__c</fullName>
    <description>Voice: WCSA - Company Audit Trail - Support Rep - Name of Resource (####)</description>
    <inlineHelpText>Voice: WCSA - Company Audit Trail - Support Rep - Name of Resource (####)</inlineHelpText>
    <label>Support Rep</label>
    <length>40</length>
    <type>Text</type>
</CustomField>